--- a/sass/components/_footer-link.scss
+++ b/sass/components/_footer-link.scss
@@ -1,5 +1,6 @@
 .bottom-link {
-  margin-left: 70px;
+  margin-top: 60px;
+  margin-bottom: 60px;
   &__title {
     font-family: "Roboto";
     font-style: normal;
