--- a/sass/components/_discribe.scss
+++ b/sass/components/_discribe.scss
@@ -1,7 +1,7 @@
 .discribe {
-  margin-left: 93px;
-  width: 570px;
-  height: 86px;
+  text-align: center;
+  
+  
   &__input input {
     width: 358px;
     height: 50px;
@@ -35,19 +35,19 @@
   }
 
   &__input {
-    display: flex;
+    // display: flex;
     gap: 12px;
     margin-top: 20px;
   }
   &__button {
-    display: flex;
+    // display: flex;
     gap: 10px;
     width: 200px;
 
     height: 50px;
     padding: 0px;
     margin: 0px;
-
+margin-top: 30px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     background-color: var(--color-third);
