--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,6 +1,7 @@
 .footer {
   background-color: var(--color-section);
-  width: 1600px;
+  width: 480px;
+  height: 603px;
 
   margin-left: auto;
   margin-right: auto;
@@ -31,7 +32,7 @@
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  padding: 32px 0px;
+  
   transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -47,8 +48,9 @@
 }
 
 .footter__flex {
-  display: flex;
+  // display: flex;
   align-items: baseline;
+  text-align: center;
 }
 
 .footer__logo {
