--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,5 +1,5 @@
 .team__flex {
-    display: flex;
+    // display: flex;
     justify-content: space-around;
     gap: 30px;
 
@@ -12,11 +12,12 @@
     border-radius: 0px 0px 4px 4px;
     padding-bottom: 30px;
     background-color: var(--color-primary);
+    margin-bottom: 30px;
 }
 
 .team {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
     background-color: var(--color-bottom);
     &__title {
             font-weight: 700;
