--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -6,41 +6,50 @@
   margin-left: auto;
   margin-right: auto;
   padding: 60px 0;
-  &__adress {
-      font-family: "Roboto";
-      font-style: normal;
-      font-size: 14px;
-      line-height: 1.71;
-      letter-spacing: 0.03em;
-      margin-top: 28px;
+  @media screen and (min-width: 768px) {
+    width: 768px;
+    height: 464px;
+  }
+  &__display {
+    @media screen and (min-width: 768px) {
+      margin-left: 76px;
     }
-        &__auth-nav {
-          margin: 0px;
-          padding: 0px;
-          transition-property: color;
-          transition-duration: 250ms;
-          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-        }
+  }
+  &__adress {
+    font-family: "Roboto";
+    font-style: normal;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    margin-top: 28px;
+  }
+  &__auth-nav {
+    margin: 0px;
+    padding: 0px;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
 
-&__name {
-  margin-bottom: 12px;
-  margin-top: 0px;
-}
-&__link {
-  color: var(--color-link);
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
+  &__name {
+    margin-bottom: 12px;
+    margin-top: 0px;
+  }
+  &__link {
+    color: var(--color-link);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
 
-&__link {
-  text-decoration: none;
-}
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  &__link {
+    text-decoration: none;
+  }
 }
 
 .footer p {
@@ -51,6 +60,10 @@
   // display: flex;
   align-items: baseline;
   text-align: center;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 .footer__logo {
@@ -66,15 +79,11 @@
   color: var(--color-primary);
 }
 
-
-
 .header__auth-nav .footer__link:hover,
 .header__auth-nav.footer__link:focus,
 .footer__auth-nav {
   color: var(--color-third);
 }
-
-
 
 .footer__auth-nav li {
   margin-bottom: 12px;
@@ -83,4 +92,3 @@
 .footer__auth-nav li:last-child {
   margin-bottom: 0px;
 }
-
