--- a/css/main.css
+++ b/css/main.css
@@ -413,6 +413,11 @@ form {
 .discribe {
   text-align: center;
 }
+@media screen and (min-width: 768px) {
+  .discribe {
+    margin-top: 60px;
+  }
+}
 .discribe__input input {
   width: 358px;
   height: 50px;
@@ -583,6 +588,12 @@ form {
   margin-top: 60px;
   margin-bottom: 60px;
 }
+@media screen and (min-width: 768px) {
+  .bottom-link {
+    margin-left: 165px;
+    margin-top: 0px;
+  }
+}
 .bottom-link__title {
   font-family: "Roboto";
   font-style: normal;
@@ -615,6 +626,17 @@ form {
   margin-left: auto;
   margin-right: auto;
   padding: 60px 0;
+}
+@media screen and (min-width: 768px) {
+  .footer {
+    width: 768px;
+    height: 464px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer__display {
+    margin-left: 76px;
+  }
 }
 .footer__adress {
   font-family: "Roboto";
@@ -656,6 +678,12 @@ form {
 .footter__flex {
   align-items: baseline;
   text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .footter__flex {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 .footer__logo {
@@ -979,6 +1007,12 @@ textarea {
   gap: 30px;
   padding-left: 0px;
 }
+@media screen and (min-width: 768px) {
+  .team__flex {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
 
 .team__flex > li {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -992,6 +1026,11 @@ textarea {
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: var(--color-bottom);
+}
+@media screen and (min-width: 768px) {
+  .team {
+    width: 768px;
+  }
 }
 .team__title {
   font-weight: 700;
