--- a/sass/components/_discribe.scss
+++ b/sass/components/_discribe.scss
@@ -1,7 +1,9 @@
 .discribe {
   text-align: center;
-  
-  
+  @media screen and (min-width: 768px) {
+    margin-top: 60px;
+  }
+
   &__input input {
     width: 358px;
     height: 50px;
@@ -47,7 +49,7 @@
     height: 50px;
     padding: 0px;
     margin: 0px;
-margin-top: 30px;
+    margin-top: 30px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     background-color: var(--color-third);
