--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,49 +1,55 @@
 .team__flex {
-    // display: flex;
-    justify-content: space-around;
-    gap: 30px;
+  // display: flex;
+  justify-content: space-around;
+  gap: 30px;
 
-    padding-left: 0px;
+  padding-left: 0px;
+  @media screen and (min-width: 768px) {
+    display: flex;
+
+    flex-wrap: wrap;
+  }
 }
 
-.team__flex>li {
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-        0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
-    padding-bottom: 30px;
-    background-color: var(--color-primary);
-    margin-bottom: 30px;
+.team__flex > li {
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  padding-bottom: 30px;
+  background-color: var(--color-primary);
+  margin-bottom: 30px;
 }
 
 .team {
-    padding-top: 60px;
-    padding-bottom: 60px;
-    background-color: var(--color-bottom);
-    &__title {
-            font-weight: 700;
-            font-size: 36px;
-            line-height: 1.16;
-            text-align: center;
-            letter-spacing: 0.03em;
-            margin-bottom: 50px;
-        }
-    
-        &__name {
-            font-weight: 500;
-            font-size: 16px;
-            line-height: 1.18;
-            text-align: center;
-            letter-spacing: 0.03em;
-            margin-top: 30px;
-        }
-    
-        &__profession {
-            font-size: 16px;
-            line-height: 1.18;
-            text-align: center;
-            letter-spacing: 0.03em;
-            color: var(--color-link);
-        }
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: var(--color-bottom);
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+  &__title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin-bottom: 50px;
+  }
+
+  &__name {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.18;
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin-top: 30px;
+  }
+
+  &__profession {
+    font-size: 16px;
+    line-height: 1.18;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--color-link);
+  }
 }
-
-
