--- a/sass/components/_discribe.scss
+++ b/sass/components/_discribe.scss
@@ -2,12 +2,18 @@
   text-align: center;
   @media screen and (min-width: 768px) {
     margin-top: 60px;
+    margin-left: 159px;
+    width: 450px;
+    height: 156px;
   }
 
   &__input input {
     width: 358px;
     height: 50px;
     margin-left: 0;
+    @media screen and (min-width: 768px) {
+      width: 450px;
+    }
 
     outline: none;
     border: 1px solid rgba(255, 255, 255, 0.3);
