--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -6,11 +6,9 @@
   padding-left: 0px;
   @media screen and (min-width: 768px) {
     display: flex;
-
     flex-wrap: wrap;
   }
 }
-
 .team__flex > li {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -18,6 +16,10 @@
   padding-bottom: 30px;
   background-color: var(--color-primary);
   margin-bottom: 30px;
+  @media screen and (min-width: 768px) {
+    width: 354px;
+    height: 536px;
+  }
 }
 
 .team {
