--- a/sass/components/_backdrop-modal.scss
+++ b/sass/components/_backdrop-modal.scss
@@ -21,6 +21,11 @@
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    @media screen and (max-width: 1200px) {
+        width: 450px;
+        height: 609px;
+      }
+           
   }
   &__button-exit {
     width: 30px;
