--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,6 +1,10 @@
 .clients {
   padding-top: 60px;
   padding-bottom: 60px;
+    @media screen and (min-width: 1200px) {
+          padding-top: 94px;
+            padding-bottom: 94px;
+      }
   &__flex {
     display: flex;
     flex-wrap: wrap;
@@ -8,11 +12,18 @@
     justify-content: center;
     gap: 30px;
     align-items: center;
+    @media screen and (min-width: 1200px) {
+        flex-wrap: nowrap;
+      }
   }
 
   &__ikon {
     width: 210px;
     height: 92px;
+    @media screen and (min-width: 1200px) {
+          width: 170px;
+            
+      }
   }
   &__link:hover,
   &__link:focus {
