--- a/sass/components/_discribe.scss
+++ b/sass/components/_discribe.scss
@@ -6,7 +6,13 @@
     width: 450px;
     height: 156px;
   }
-
+ @media screen and (min-width: 1200px) {
+   margin-left: 93px;
+   margin-top: 0px;
+   text-align: left;
+  width: 570px;
+    height: 86px;
+ }
   &__input input {
     width: 358px;
     height: 50px;
@@ -14,7 +20,9 @@
     @media screen and (min-width: 768px) {
       width: 450px;
     }
-
+@media screen and (min-width: 1200px) {
+width: 358px;
+}
     outline: none;
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -46,6 +54,9 @@
     // display: flex;
     gap: 12px;
     margin-top: 20px;
+    @media screen and (min-width: 1200px) {
+        display: flex;
+      }
   }
   &__button {
     // display: flex;
@@ -70,6 +81,10 @@
     letter-spacing: 0.06em;
 
     color: var(--color-primary);
+    @media screen and (min-width: 1200px) {
+        display: flex;
+        margin-top: 0px;
+      }
   }
   &__button:focus,
   &__button:hover {
