--- a/sass/components/_footer-link.scss
+++ b/sass/components/_footer-link.scss
@@ -5,6 +5,11 @@
     margin-left: 165px;
     margin-top: 0px;
   }
+     @media screen and (min-width: 1200px) {
+       margin-left: 70px;
+       margin-bottom: 0px;
+     }
+  
 
   &__title {
     font-family: "Roboto";
