--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -6,7 +6,12 @@
     line-height: 23px;
     text-align: center;
     letter-spacing: 0.03em;
-
+@media screen and (max-width: 1200px) {
+        width: 370px;
+        height: 60px;
+        line-height: 30px;
+        
+    }
     
     color: #212121;
     &__field {
@@ -43,6 +48,10 @@
     cursor: pointer;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        @media screen and (max-width: 1200px) {
+                width: 370px;
+        
+            }
 }
 &__field label {
     margin-bottom: 4px;
@@ -74,6 +83,10 @@
     color: rgba(117, 117, 117, 0.5);
     padding: 12px 16px;
     outline: none;
+    @media screen and (max-width: 1200px) {
+            width: 370px;
+    
+        }
 }
 &__svg {
     position: absolute;
@@ -94,6 +107,10 @@
 .form__checkbox {
     margin-top: 20px;
     text-align: center;
+    @media screen and (max-width: 1200px) {
+            text-align: left;
+    
+        }
 }
 .size {
     margin-top: 12px;
@@ -138,6 +155,10 @@
     letter-spacing: 0.03em;
 
     color: var(--color-link);
+    @media screen and (max-width: 1200px) {
+            font-size: 12px;
+    
+        }
 }
 
 .checkbox__link {
@@ -165,6 +186,7 @@
     transition-property: color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 
 textarea {
