--- a/sass/components/_portfolio-nav.scss
+++ b/sass/components/_portfolio-nav.scss
@@ -7,6 +7,10 @@
      display: flex;
      justify-content: center;
      gap: 8px;
+    @media screen and (max-width: 768px) {
+    flex-wrap: wrap;
+    width: 326px;
+        }
  }
 
 
