--- a/sass/components/_work.scss
+++ b/sass/components/_work.scss
@@ -1,5 +1,9 @@
 .work {
-    display: none;
+   display: none;
+    @media screen and (min-width: 1200px) {
+    
+            display: contents;
+        }
     padding-top: 94px;
     padding-bottom: 94px;
     &__title {
@@ -8,6 +12,10 @@
             line-height: 1.16;
             text-align: center;
             letter-spacing: 0.03em;
+            @media screen and (min-width: 1200px) {
+            
+                    margin-top: 94px;
+                }
         }
     
         &__flex {
@@ -16,6 +24,10 @@
             justify-content: space-around;
             gap: 30px;
             padding-left: 0px;
+            @media screen and (min-width: 1200px) {
+            
+                    margin-bottom: 94px;
+                }
         }
                 &__img {
                     position: relative;
