--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -73,6 +73,11 @@ h1 {
           @media screen and (min-width: 768px) {
               width: 768px;
           }
+                  @media screen and (min-width: 1200px) {
+                     width: 1200px;
+                     margin-left: 215px;
+                     margin-right: 215px;
+                  }
 }
 
 .border {
@@ -87,4 +92,9 @@ a:focus {
 
 form {
     width: 448px;
+    @media screen and (max-width: 780px) {
+            width: auto
+    
+        }
+               
 }
