--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -32,9 +32,9 @@
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: var(--color-bottom);
-  @media screen and (min-width: 768px) {
-    width: 768px;
-  }
+  // @media screen and (min-width: 768px) {
+  //   width: 768px;
+  // }
          @media screen and (min-width: 1200px) {
            width: 1600px;
          }
