--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,5 +13,7 @@
 @import './components/portfolio-nav';
 @import './components/social-link-team';
 @import './components/team';
+@import './components/menu';
+
 
 
