--- a/css/main.css
+++ b/css/main.css
@@ -80,8 +80,6 @@ h1 {
 @media screen and (min-width: 1200px) {
   .conteiner {
     width: 1200px;
-    margin-left: 215px;
-    margin-right: 215px;
   }
 }
 
@@ -109,6 +107,7 @@ form {
   margin-right: auto;
   border-bottom: 1px solid #ececec;
   width: 480px;
+  position: relative;
 }
 @media screen and (min-width: 768px) {
   .header {
@@ -117,7 +116,9 @@ form {
 }
 @media screen and (min-width: 1200px) {
   .header {
-    width: 1200px;
+    width: 1600px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 .header__nav {
@@ -333,7 +334,10 @@ form {
 }
 @media screen and (min-width: 1200px) {
   .work {
-    display: contents;
+    display: inherit;
+    width: 1600px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 .work__title {
@@ -442,6 +446,9 @@ form {
   .clients {
     padding-top: 94px;
     padding-bottom: 94px;
+    width: 1600px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 .clients__flex {
@@ -597,6 +604,9 @@ form {
 @media screen and (min-width: 1200px) {
   .feature-list {
     padding-top: 94px;
+    width: 1600px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 @media screen and (min-width: 768px) {
@@ -1292,6 +1302,7 @@ textarea {
 }
 
 .menu-button {
+  display: inline-flex;
   margin: 0px;
   padding: 0px;
   border: none;
@@ -1308,4 +1319,19 @@ textarea {
 
 .menu-button.is-open .icon-menu {
   display: none;
+}
+
+.menu-container {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: red;
+  width: 100%;
+  height: 100%;
+  font-size: 20px;
+  padding: 20px;
+}
+.menu-container.is-open {
+  display: block;
 }/*# sourceMappingURL=main.css.map */
