--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -4,6 +4,9 @@
     @media screen and (min-width: 1200px) {
           padding-top: 94px;
             padding-bottom: 94px;
+            width: 1600px;
+            margin-left: auto;
+            margin-right: auto;
       }
   &__flex {
     display: flex;
