--- a/sass/components/_featurelist.scss
+++ b/sass/components/_featurelist.scss
@@ -2,6 +2,9 @@
   padding-top: 60px;
   @media screen and (min-width: 1200px) {
     padding-top: 94px;
+      width: 1600px;
+        margin-left: auto;
+        margin-right: auto;
   }
   &__title {
       @media screen and (min-width: 768px) {
