--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -3,11 +3,15 @@
     margin-right: auto;
     border-bottom: 1px solid #ececec;
     width: 480px;
+    position: relative;
     @media screen and (min-width: 768px) {
             width: 768px;
         }
     @media screen and (min-width: 1200px) {
-        width: 1200px;
+        
+        width: 1600px;
+            margin-left: auto;
+            margin-right: auto;
             }
     &__nav {
             display: flex;
