--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -1,4 +1,5 @@
 .menu-button {
+    display: inline-flex;
     margin: 0px;
     padding: 0px;
     border: none;
@@ -15,4 +16,19 @@
 
 .menu-button.is-open .icon-menu {
     display: none;
+}
+.menu-container{
+    display: none;
+    position: absolute;
+
+    top: 100%;
+    left: 0;
+    background-color: red;
+    width: 100%;
+    height: 100%;
+    font-size: 20px;
+    padding: 20px;
+    &.is-open{
+        display: block;
+    }
 }
