--- a/css/main.css
+++ b/css/main.css
@@ -166,6 +166,10 @@ form {
 @media screen and (min-width: 1200px) {
   .auth-nav {
     display: flex;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.02em;
   }
 }
 .auth-nav__envelope, .auth-nav__icon {
@@ -346,11 +350,6 @@ form {
   line-height: 1.16;
   text-align: center;
   letter-spacing: 0.03em;
-}
-@media screen and (min-width: 1200px) {
-  .work__title {
-    margin-top: 94px;
-  }
 }
 .work__flex {
   display: flex;
@@ -1301,37 +1300,68 @@ textarea {
   color: var(--color-link);
 }
 
-.menu-button {
-  display: inline-flex;
+.burger {
   margin: 0px;
   padding: 0px;
+  background-color: #ffffff;
   border: none;
-  background-color: #FFFFFF;
+}
+.burger:focus, .burger:hover {
+  fill: #2196f3;
 }
 
-.menu-button .icon-cross {
-  display: none;
+.mobile-menu.is-open {
+  transform: translateX(0);
 }
 
-.menu-button.is-open .icon-cross {
-  display: block;
-}
-
-.menu-button.is-open .icon-menu {
-  display: none;
-}
-
-.menu-container {
-  display: none;
-  position: absolute;
-  top: 100%;
+.mobile-menu {
+  position: fixed;
+  top: 0;
   left: 0;
-  background-color: red;
   width: 100%;
   height: 100%;
-  font-size: 20px;
-  padding: 20px;
+  background-color: #ffffff;
+  transform: translateX(100%);
+  transition: tranform 500ms;
 }
-.menu-container.is-open {
-  display: block;
+.mobile-menu__close {
+  margin: 0px;
+  padding: 0px;
+  background-color: #ffffff;
+  border: none;
+  position: absolute;
+  top: 10px;
+  right: 15px;
+}
+.mobile-menu__close:hover, .mobile-menu__close:focus {
+  fill: #2196f3;
+}
+.mobile-menu__nav {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 47px;
+  letter-spacing: 0.02em;
+  padding-top: 48px;
+  padding-left: 40px;
+}
+.mobile-menu__link {
+  color: #212121;
+}
+.mobile-menu__adress {
+  margin-top: 306px;
+}
+.mobile-menu__post {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: 0.02em;
+  color: #757575;
+  margin-top: 32px;
+}
+.mobile-menu__tel {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 40px;
+  letter-spacing: 0.02em;
+  color: #2196f3;
 }/*# sourceMappingURL=main.css.map */
