--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -1,34 +1,66 @@
-.menu-button {
-    display: inline-flex;
+.burger {
+  margin: 0px;
+  padding: 0px;
+  background-color: #ffffff;
+  border: none;
+  &:focus,
+  &:hover {
+    fill: #2196f3;
+  }
+}
+.mobile-menu.is-open {
+  transform: translateX(0);
+}
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  transform: translateX(100%);
+  transition: tranform 500ms;
+  &__close {
     margin: 0px;
     padding: 0px;
+    background-color: #ffffff;
     border: none;
-    background-color: #FFFFFF;
-}
-
-.menu-button .icon-cross {
-    display: none;
-}
-
-.menu-button.is-open .icon-cross {
-    display: block;
-}
-
-.menu-button.is-open .icon-menu {
-    display: none;
-}
-.menu-container{
-    display: none;
     position: absolute;
+    top: 10px;
+    right: 15px;
+  }
+  &__close:hover,
+  &__close:focus {
+    fill: #2196f3;
+  }
+  &__nav {
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 47px;
+    letter-spacing: 0.02em;
+    padding-top: 48px;
+    padding-left: 40px;
+  }
+  &__link {
+    color: #212121;
+  }
+  &__adress {
+    margin-top: 306px;
+  }
+  &__post {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 28px;
+    letter-spacing: 0.02em;
 
-    top: 100%;
-    left: 0;
-    background-color: red;
-    width: 100%;
-    height: 100%;
-    font-size: 20px;
-    padding: 20px;
-    &.is-open{
-        display: block;
-    }
+    color: #757575;
+    margin-top: 32px;
+  }
+  &__tel {
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 40px;
+    letter-spacing: 0.02em;
+    color: #2196f3;
+  }
 }
