--- a/css/main.css
+++ b/css/main.css
@@ -1315,6 +1315,7 @@ textarea {
 }
 
 .mobile-menu {
+  overflow-y: scroll;
   position: fixed;
   top: 0;
   left: 0;
@@ -1341,8 +1342,6 @@ textarea {
   font-size: 40px;
   line-height: 47px;
   letter-spacing: 0.02em;
-  padding-top: 48px;
-  padding-left: 40px;
 }
 .mobile-menu__link {
   color: #212121;
@@ -1356,7 +1355,6 @@ textarea {
   line-height: 28px;
   letter-spacing: 0.02em;
   color: #757575;
-  margin-top: 32px;
 }
 .mobile-menu__tel {
   font-weight: 500;
@@ -1364,4 +1362,32 @@ textarea {
   line-height: 40px;
   letter-spacing: 0.02em;
   color: #2196f3;
+}
+.mobile-menu__social {
+  margin-top: 64px;
+  gap: 10px;
+  display: flex;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+  letter-spacing: 0.02em;
+}
+.mobile-menu__container {
+  padding: 48px;
+}
+
+.mobile-menu__insta {
+  color: #2196F3;
+}
+
+.mobile-menu__nav .mobile-menu__link.current {
+  color: var(--color-third);
+}
+
+.mobile-menu__nav > li:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-menu__adress > li:not(:last-child) {
+  margin-bottom: 32px;
 }/*# sourceMappingURL=main.css.map */
