--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -37,6 +37,8 @@
   // }
          @media screen and (min-width: 1200px) {
            width: 1600px;
+          margin-left: auto;
+            margin-right: auto;
          }
   &__title {
     font-weight: 700;
