--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -5,7 +5,9 @@
             rgba(47, 48, 58, 0.4)),
         url(../images/backgraundfone.jpg);
 
-    
+    @media(min-device-pixel-ratio: 2 ), (min-resolution:192dpi) {
+        background-image: url(/images/Img@2x2.jpg);
+ }
 background-position: center;
 width: 480px;
     height: 400px;
